# Photo-tauri

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
src/: index.html  main.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_ops.rs  file_watcher.rs  lib.rs  main.rs  metadata.rs  settings.rs  shell_integration.rs  thumbnail.rs  win_hit_test.rs
