[package]
name = "photo-tauri"
version = "0.1.0"
edition = "2021"
description = "Photo Viewer - Fluent Design"

[lib]
name = "photo_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
image = "0.25"
notify = "7"
dirs = "5"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
trash = "5"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
